1.10/ingress/ingress-L7.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-layer7
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: eric.yeh
    http:
      paths:
      - path: /bar
        backend:
          serviceName: service-echo-bar
          servicePort: 80
      - path: /foo
        backend:
          serviceName: service-echo-foo
          servicePort: 80
