1.10/ingress/ingress-test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-layer7
spec:
  backend:
    serviceName: service-echo-bar
    servicePort: 80
